# ChangeLog for media-gfx/postr
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/postr/ChangeLog,v 1.8 2013/12/08 19:08:18 pacho Exp $

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> postr-0.13.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> postr-0.13.ebuild:
  amd64 stable, bug #478252

  03 Aug 2013; Michał Górny <mgorny@gentoo.org> postr-0.13.ebuild:
  Move dev-python/twisted to dev-python/twisted-core.

  29 Mar 2013; Gilles Dartiguelongue <eva@gentoo.org> -postr-0.12.4.ebuild:
  Clean up old revision.

  07 Feb 2013; Ulrich Müller <ulm@gentoo.org> postr-0.13.ebuild:
  Move Creative Commons licenses to shorter names.

*postr-0.13 (09 Oct 2012)

  09 Oct 2012; Alexandre Rostovtsev <tetromino@gentoo.org> postr-0.12.4.ebuild,
  +postr-0.13.ebuild, +files/postr-0.13-exception-after-quit.patch,
  metadata.xml:
  Bump with bugfixes, UI improvements, and internationalization. Switch to
  python.eclass due to upstream build system changes. Update license.

  21 May 2012; Krzysztof Pawlik <nelchael@gentoo.org> postr-0.12.4.ebuild:
  Remove calls to python-distutils-ng_redoscript, it is automated in eclass.

*postr-0.12.4 (14 May 2012)

  14 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  +postr-0.12.4.ebuild, +metadata.xml:
  Add yet another flickr image uploader; needed for eog-plugins.