@@ -3,13 +3,14 @@ Hash: SHA256
 
 AUX postr-0.13-exception-after-quit.patch 1593 SHA256 382dc5d5f588386f8fbf094408fd5b20129710e7fc4d6fe10607d9089946e312 SHA512 02276cf052bc66045fe225f28a3fdae2af2de25ae5baae8e5c3e0f7887dc0ee7e7d0110b7054e7778cad3fbb0de81c306b914eaff288a3a309dc966a76621b6a WHIRLPOOL 58d3e8967456175b6f38f9a523c11c4d4dfa068ab93df95c6c5cdce251170c603e0e7e4d24b4508514f3ab8bdc1cb20a5852e1594c0303f85921d202b7a7a086
 DIST postr-0.13.tar.xz 382364 SHA256 3d5d4515892c8b81494257d7fc35d1c13a857bbdaf7b01ba67bde62ebddb962c SHA512 2d6673e3e2715c6a2a2dc50aeb9c9636d44ef2c6eafdb1b6d87118a3f9d825b15e3f196bc3a9abc7cba35ebe0f88d569bc0c777c3d9096ac9b0a28c084a58828 WHIRLPOOL d84e31e33bce2180b96fbae5dc9ca0fda761b37ba822d7e367ea38c4cff6763acbd1ea872ee550c55a874da9ff8c1d4a493d5739dec385c6b9a8623daef313a7
+EBUILD postr-0.13-r1.ebuild 1731 SHA256 abe98f5e79b41ae26373efc7194ffda084afeecf17d9f77ed72bd76e494df3dc SHA512 f01c7f5d1c8b0925875bef914a5d163d849c56a608d64bf4594505ce58e1569e4e2ba5c6d3b3b9b15e5e4a7057df7af348b50418070b2acfac926f2db66bb6d6 WHIRLPOOL bdf4b9be1b925eb5179558f3f6ce54babbf0ac1a359a70b5972b27d1af53fe6c2386a5731090a641f15d9bf9b50b6a99e77cbc1ee8426d9852403a7b085de400
 EBUILD postr-0.13.ebuild 1980 SHA256 e25739580eba928c357983a5e96c7910d419df869a8fe8bca5f6c5f2bfb8cab5 SHA512 dc7090e7f2d7f77eaffa6ed1d78b3f6974962ef734c649d3b589605f595fd5a415df2e7385987e16b72c4efe567d8a245d3b54780bd2b6e8d980e816d8856f25 WHIRLPOOL 3e3e0e93c8b72026fcf1e9fbd1976ecd486e03ac9dd1d6f1abccceeb1a0cd3b07203d9ddfae917a2717b82eb6067383b8b305786163d80d8d8cbb62249cbd265
-MISC ChangeLog 1414 SHA256 b5d3f7a90f8c9b02467adec5615afe5dcc45359f8a3199b94cde521eede824a0 SHA512 cac82c8beca180a1a0efab1f3fec3b474660d299ac3c242c80f18cf453bc40a510ddbcaeb990f70864612eafdd7e4ff6b743c8954fdddd8ea475001125b34680 WHIRLPOOL 4f1e1ddb03e8a8cb5acc9786508268a1d2219fa72d408fa0a6836e7c257f1f3f7c028febe9088cb892a206ade8cc3bfe36604d3917a5c6b5e8ef676563583802
+MISC ChangeLog 1593 SHA256 8811143ec6102d29893cadbe3ecda101b5712b579f4ccc0147bb8f6e97c05395 SHA512 97b5c6c56b055f3da8f0aa28148bc19db509a6716be701da7bf1b03320e6fc75f8cd1822a349345f9a9008b7184dc8b3a93bd0043e339810c2b8b0d998714ae7 WHIRLPOOL c9ada05d6d2b934ed7d2f49abb9505e6ecd17aa490bfc5483f9b13ebcd785af977942bf194f231a78ce95410b4de10fd4959b1d9e46badd330507215e4711c0b
 MISC metadata.xml 295 SHA256 07e212d1cab89a586f5ee814992de03bf84c4edfffe869dca642ce8c37eafee0 SHA512 c0c6b458c2c27b5de838bc58432de28b873b2b53fbbb5e17503b048f17e87ef105ade23ce7d3ec80223494521e65602d875459b5a278c29e31e1dca4d943b7f0 WHIRLPOOL 3b54e9887709bdd689ac82c6cf987ae088038da73cad5d3968db46a252cc6a9a0159e37809488c527c5c32ea42c4fd8cb312105959d41c9ea382b071622ee29d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKkw6MACgkQCaWpQKGI+9SdpwCcCTKSTI88GvJ7vdRmBD66Vz+m
-t1oAnj5MB+TOZUHG8SreTIlzSk8hewmB
-=HjeO
+iEYEAREIAAYFAlOnKaQACgkQCaWpQKGI+9QfdACbBMyGGbC0yFmJNIScxzjzDHvn
+594Anijo3Iq19V6LqPcxhAaD6Fpl5HOv
+=eFxK
 -----END PGP SIGNATURE-----
