@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup unpack
+DEPEND=python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[xml] ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/pygtk:2[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] app-text/gnome-doc-utils dev-util/intltool sys-devel/gettext virtual/pkgconfig app-arch/xz-utils >=sys-apps/sed-4
+DESCRIPTION=Flickr uploader for GNOME
+EAPI=5
+HOMEPAGE=https://wiki.gnome.org/Apps/Postr
+IUSE=python_targets_python2_7 python_single_target_python2_7
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2+ CC-BY-SA-3.0
+RDEPEND=python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[xml] ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/pygtk:2[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/bsddb3[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/dbus-python[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/gconf-python[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/gtkspell-python[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/libgnome-python[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/pygobject:2[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/twisted-core[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-python/twisted-web[python_targets_python2_7(-)?,python_single_target_python2_7(+)?]
+REQUIRED_USE=python_single_target_python2_7? ( python_targets_python2_7 ) ^^ ( python_single_target_python2_7 )
+SLOT=0
+SRC_URI=mirror://gnome/sources/postr/0.13/postr-0.13.tar.xz
+_eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	9637c29fc715b17a6328f24251129557	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	libtool	2964b38e7ad7f6998406386ad1c6dbcf	multilib	fac675dcccf94392371a6abee62d909f	python-single-r1	a71a169a881e0a11d04a7fe12dc39f6e	python-utils-r1	6164ef644981c5dffdf4cf891caed613	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=5ba47ca76503ee2b8c0228ff430e9f7e
