@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test
+DEPEND=>=net-im/pidgin-2.6 libcaca? ( media-libs/libcaca media-libs/imlib2 ) imlib? ( media-libs/imlib2 ) pam? ( sys-libs/pam ) gnutls? ( net-libs/gnutls ) sys-devel/make >=dev-util/cmake-2.8.9 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=an IRC gateway to IM networks
+EAPI=5
+HOMEPAGE=https://symlink.me/projects/minbif/wiki/
+IUSE=gnutls +imlib +libcaca pam xinetd
+KEYWORDS=~amd64 ~arm ~x86
+LICENSE=GPL-2
+RDEPEND=>=net-im/pidgin-2.6 libcaca? ( media-libs/libcaca media-libs/imlib2 ) imlib? ( media-libs/imlib2 ) pam? ( sys-libs/pam ) gnutls? ( net-libs/gnutls ) virtual/logger xinetd? ( sys-apps/xinetd )
+REQUIRED_USE=libcaca? ( imlib )
+SLOT=0
+SRC_URI=https://symlink.me/attachments/download/148/minbif-1.0.5.tar.gz
+_eclasses_=cmake-utils	412d9e2d2c6f85f46dad595e68570d21	eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	32bd61b45c2f57e468b4ee7311fec8f5	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=0d51c38d600816ed9f5de675895ead19
