@@ -6,23 +6,14 @@ AUX minbif-1.0.5-gcc47.patch 1835 SHA256 b95081452749405842c55d38f0093f1f01691fd
 AUX minbif-1.0.5-glib-single-includes.patch 754 SHA256 65c27d01bd9d774da8ef38a1364bf74caf4ce5891776ac0cbb8e391cb57bab4e SHA512 fd7c27d1e171aa1e321e82f5e41e6908109101b52519dcad32a9107d14c95b0664dcf7d6ed1969dfce7397976712a6f094966bb06e36ff21fa0c75fe6d86ea91 WHIRLPOOL 9a42c62d9f9677d9768920dffcbd37690be34dc8ae9bd249b86d637aa013ebbc75596a232298826920f5d505e2ae92212dd01b5a0c9e6a4d704127c3851063c9
 AUX minbif.initd 561 SHA256 0a66ca96897ae7fb948150e1d7e01b328de2c2d32521de4c6fe24fdd2f630c7a SHA512 6106657567b5fca1255f30b89d2893f46e5593177c2bfc073676d9628ca31743b44d53e2864d1e1296e11b1d3b69f3037fcbcae3d12ac22e374c763cee4f19f4 WHIRLPOOL dae8be81c5f3844ed6684a99d05f99f8068148625710c813cfe807b6206550c90043995261c2954eedb6cd6dc6b51423546a282aa5dd6af09f87e4d1006d61a8
 DIST minbif-1.0.5.tar.gz 176039 SHA256 88271af203a89556165a9ebb4e00e55ea5b649146aea855dd799a79bd9e4befd SHA512 e84c6f38ad35a660f9c319b702ae5743cece167c8e116976a9ca0caf527ad23ea17ea8f518f9bd76536e87283362d2087201a5307128740fc7f05dccabacfbcd WHIRLPOOL 10e51abc809e16c65c86f5887867f9d4b680a60321921a2fdd58345ce100cdea8317d13a007df4efaae786a4ea1b1bdc0231fe186f877f6a5716dbfdc3c32aad
+EBUILD minbif-1.0.5-r1.ebuild 1931 SHA256 f40390c8fabf68a34c1ad3bee2124ea73f915eaebd7ca8a0b3864e0d93bb7798 SHA512 5063c413e189d22214fea4a5a293fe7a536d0a05a3a5dbd1aa21d46c7ea39669f96032d9207b3fa39082e1cc7e57e28a33fb92f269754c8d8f9899555d385cc8 WHIRLPOOL 2f699286a7411990a06c21fbe71727e28bfd2bf2aba92b757c54fffa48eec30d7657c2dad93e1accfcc6d385c333774c76e1f4780f7cd14fc87ab165e42a8fd4
 EBUILD minbif-1.0.5.ebuild 2027 SHA256 7f13fb28ca53d4af6e5ab2bc4f7a0eb2733630725f99961f90b146170e726afa SHA512 3188237f053814bd5811ad72d6317ff68e283a15653a2b7091008d7079ec06bdc66d9be143a0d186f491ff53a4504a8e5ee65d30446efa4446dea77dc505954a WHIRLPOOL 8ad628510cfdb745a2ab39b8b2fc9e2dd77f677dc5c9494d7827d8b07913ee0be92cc3fb438345c3388ce37be2d2f20e214bd0f2ebd55eab16878f1a249efb7e
-MISC ChangeLog 2381 SHA256 4fc52c0ff1cf2c50ef4f65ef8dc308986629648a8d96d0151757ae5ad6eeae42 SHA512 056b502ca8f3ad0abd9c431b4b9007815f07622413372c14d757470e611ad1ec7351e6e28d74585746100632f942a7948fc3a02278c0788ebefc28acd6488fdd WHIRLPOOL 23a22050c0482150a2e53fbadce518a4d394e4684ea31a31f973814534c464413350f722bd39ec9e6fb6734f2e88ace2e174e3180a10e0457666e39355f5534e
+MISC ChangeLog 2560 SHA256 fbb312e2f1c9e666ee6cce959cda5cbee0dcb33dc85384e1de21290edf5221fe SHA512 17d5c212f2298bcf6d059986257fe956db98a54bab99df400574ecdef06edd175dba15c9dc296238f959db9ce1fe3a1c0ecf7a1b40163bc4c45da43707976ea5 WHIRLPOOL 1891f9e352ce40d1d2a5ca70ffe09d2a0f0235396f573b38bf87c8126f79991569465cd89f0bf90d92d12658df750d906dda08024cfd3ef08e0e11c8d14385a0
 MISC metadata.xml 357 SHA256 6a802b20a61dac569b72bf6033ab177bbdd0ce0be3d17b0ebf7843a67836671e SHA512 09e55b6020093065f9271e3af0ea9f50117f74d7d2d8e4f662fc19483dc7ec5f41d49a3a620897729d31d9ae748f00715d380e832e24bb0ba29bbf1e6e65def1 WHIRLPOOL d20fd9ea9f60d931609c197359d5342556142ed9705fd5219e9b4b1acf5c815a6f021fa73472a9eca39152c70de8980e11eb65a0ac1acdb12e209ec46165763e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSzPMQAAoJEPGu1DbS6WIAOkoP+wUJpFJ+Jeqm2RFrRMDkrgKF
-fyiIr95fQ30raWGnwKSLXbWjFqd2TWKEyHpBbRZqjC1hS30x0UaE9eleEgMhy4Jk
-2dp2oYEPM9fPaQenEImk/3dwQ6zM7euOvi8gPOMm2gpezD1KWb+/fJeZ+yhx/7jz
-h1ClismBlWK911MWzIgMZGa8WGkgzSVVBXkLquigeZFUgpmtlcojCquzE1puiASV
-lDSgvZvUjH3wUBLVDzPZbJr6z6Uj97YncNXHcMlgu4UPDIbSMgaK0LWT2G/tQh2O
-tvpcsnVg9+wQ4uVfOj1bYe2K+PWWYrhTY6TFH39A/7hCWxp6UaWClTWuEwmHwDo0
-CVBwjEVezFXktRFpnmh4vF9g1QTBERwIA8JAIPwjbF4Lpx8GiMgcdE7hG1cn9/GB
-IooKUT5JMJdkz2XcNX1qoAhWPAAuYOlBPLt1/yl+Aw9EvYV+tpF53sDAcd//8IL2
-PixqspiP0qjjxy7d8bgMlGkbrZ0HX9uM1SumzR87FAEkjLDe0e/UVglHEg+DiHrR
-/r9yzC7dLigGuAXta//K6focLT+MS4KIokwjxccJoCkp1ZgvTi9Ougo9X1svncNH
-PDhD33uc1uwo92yfV0RPGRzEFFDzyK8eNBh+pjiTU9DSILuTunVeRI1sQjOR4lpL
-ZZtts/iZFPppyjkrEtwm
-=BXS4
+iEYEAREIAAYFAlOnLJEACgkQCaWpQKGI+9T7TgCfcccoJIO0OrG+wYqXbOSjVhFl
++JUAnj5lBwKAAAqh+NB6Y9Gddjo9/+Ft
+=fLyg
 -----END PGP SIGNATURE-----
