@@ -1,6 +1,11 @@
 # ChangeLog for net-im/minbif
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/minbif/ChangeLog,v 1.16 2014/01/08 06:41:12 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/minbif/ChangeLog,v 1.17 2014/06/22 19:20:48 pacho Exp $
+
+*minbif-1.0.5-r1 (22 Jun 2014)
+
+  22 Jun 2014; Pacho Ramos <pacho@gentoo.org> +minbif-1.0.5-r1.ebuild:
+  Drop support relying on farsight2, that is obsolete by farstream for ages
 
   08 Jan 2014; Mike Frysinger <vapier@gentoo.org> minbif-1.0.5.ebuild:
   Inherit the user eclass for enewuser/etc...
