@@ -1,6 +1,11 @@
 # ChangeLog for media-gfx/postr
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/postr/ChangeLog,v 1.8 2013/12/08 19:08:18 pacho Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/postr/ChangeLog,v 1.9 2014/06/22 19:08:19 pacho Exp $
+
+*postr-0.13-r1 (22 Jun 2014)
+
+  22 Jun 2014; Pacho Ramos <pacho@gentoo.org> +postr-0.13-r1.ebuild:
+  Drop old extension uncompatible with nautilus-3, port to new python eclasses
 
   08 Dec 2013; Pacho Ramos <pacho@gentoo.org> postr-0.13.ebuild:
   x86 stable, bug #478252
